plugins {
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    group = 'ru.innotech'
    version = '0.0.1-SNAPSHOT'

    ext {
        springCloudVersion = "2025.0.0"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
        dependencies {
            dependency 'org.mapstruct:mapstruct:1.6.3'
            dependency 'org.mapstruct:mapstruct-processor:1.6.3'
            dependency 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
            dependency 'net.logstash.logback:logstash-logback-encoder:7.4'
        }
    }

    dependencies {
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(Test).configureEach {
        systemProperty 'spring.profiles.active', 'test'
        useJUnitPlatform()
    }

    jar {
        enabled = false
    }
}
